# elulib-desktop

./: .env-example  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: publish-release.yml  release.yml  test.yaml  tests.yaml
scripts/: sync-version.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.update.json
src-tauri/icons/: icon.icns  mac-1024.icns
src-tauri/macos/fr.lproj/: InfoPlist.strings
src-tauri/src/: constants.rs  lib.rs  link_handler.js  main.rs  notifications.rs  rate_limit.rs
src-tauri/src/types/: notifications.d.ts
src-tauri/static/: connection-error.html
src-tauri/static/assets/css/: main.css  reset.css
src-tauri/static/assets/js/: main.js
src-tauri/tests/: integration_tests.rs  unit_tests.rs
