[package]
name = "elulib-desktop"
version = "0.1.0"
description = "Application de bureau élulib"
authors = ["élulib"]
license = "MIT"
repository = "https://github.com/elulib/desktop-app"
edition = "2021"
rust-version = "1.77.2"


[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]

# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
serde_repr = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
keyring = "2.0"
url = "2.5"

# Tauri dependencies
tauri = { version = "2.9.2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-shell = "2.0"

[features]
default = ["tauri/custom-protocol"]
